# SFMLTemplate

./: .gitignore  CMakeLists.txt
